Archive2/97/0ed530f4360ec1/output
main.cpp:1:1: error: 'count' does not name a type
 count=0
 ^
