Archive2/97/0ed530f4360ec1/main.cpp
count=0
count=count+sum
sum=count+1



